LRSD-6240 Fix java version issues in spring boot app